--- a/C++ Release/Measurement_Software_C.vcxproj
+++ b/C++ Release/Measurement_Software_C.vcxproj
@@ -85,6 +85,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Measurements.cpp" />
+    <ClCompile Include="Morphologika.cpp" />
     <QtRcc Include="Measurement_Software.qrc" />
     <QtUic Include="Measurement_Software.ui" />
     <QtMoc Include="Measurement_Software.h" />
@@ -96,7 +98,9 @@
   <ItemGroup>
     <ClInclude Include="File_Management.h" />
     <ClInclude Include="Landmark.h" />
+    <ClInclude Include="Measurements.h" />
     <ClInclude Include="Measurement_Functions.h" />
+    <ClInclude Include="Morphologika.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
