Inclusion of the linear OA transformation functions in Measurement_Functions.cpp as well as inclusion of an icon (Icon.ico) and resource file (Resources.rc) to link the icon

--- a/C++ Release/Measurement_Software_C.vcxproj
+++ b/C++ Release/Measurement_Software_C.vcxproj
@@ -102,6 +102,12 @@
     <ClInclude Include="Measurement_Functions.h" />
     <ClInclude Include="Morphologika.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resources.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
